# PriceCheckerPT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: .default_config.json
assets/lang_packs/: en.json  pt.json
assets/styles/: styles.css
src/components/: AuchanContent.cpp  AuchanContent.h  CompareComponent.cpp  CompareComponent.h  ContentVBox.cpp  ContentVBox.h  ContinenteContent.cpp  ContinenteContent.h  ElcorteinglesContent.cpp  ElcorteinglesContent.h  EmptyList.cpp  EmptyList.h  HeaderBar.cpp  HeaderBar.h  InfoBar.cpp  InfoBar.h  MiniPreco.cpp  MiniPreco.h  MiniprecoContent.cpp  MiniprecoContent.h  ProductComponent.cpp  ProductComponent.h  RootContent.cpp  RootContent.h  RootVBox.cpp  RootVBox.h  SearchableContent.cpp  SearchableContent.h  WatchListComponent.cpp  WatchListComponent.h  WatchListNotification.cpp  WatchListNotification.h  Window.cpp  Window.h
src/components/stores/: AuchanContent.cpp  AuchanContent.h  ContinenteContent.cpp  ContinenteContent.h  ElcorteinglesContent.cpp  ElcorteinglesContent.h  MiniprecoContent.cpp  MiniprecoContent.h  RecheioContent.cpp  RecheioContent.h  SparContent.cpp  SparContent.h
src/helper/: Fetchable.h  Searchable.h
src/utils/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  CssProvider.cpp  CssProvider.h  Fetchable.cpp  Fetchable.h  FileCacheManager.cpp  FileCacheManager.h  LanguageManager.cpp  LanguageManager.h  Searchable.cpp  Searchable.h  TaskQueue.cpp  TaskQueue.h  UIQueue.cpp  UIQueue.h  Utils.cpp  Utils.h
